# SQL-Agent

./: README.md  SQL Agent.ipynb  pyproject.toml  template.py
api/: main.py
build_graph/: graph.py  state.py
build_graph/nodes/: agent_node.py  tool_node.py
build_graph/tool/: get_schema.py  list_tables.py  query_checker.py  run_query.py
db_ingestion/: ingestion.py
frontend/: app.py
models/: llm.py
notebook/: sql_agent.ipynb
