[project]
name = "sql-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "gradio>=6.14.0",
    "langchain>=1.3.1",
    "langchain-core>=1.4.0",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.0",
    "sqlalchemy>=2.0.49",
]
